Change draftplot_masks to 3x1

--- a/notebooks/Draftplot_masks.ipynb
+++ b/notebooks/Draftplot_masks.ipynb
@@ -22,7 +22,9 @@
     "import copy\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../src')"
+    "sys.path.append('../src')\n",
+    "\n",
+    "from alldata import AllData"
    ]
   },
   {
@@ -68,12 +70,12 @@
     "mpl.rc('figure.subplot',wspace=.02,hspace=.1,left=.01,right=.99,top=.95,bottom=.01)\n",
     "mpl.rc('figure',figsize=(5,5))\n",
     "\n",
+    "ad = AllData()\n",
+    "\n",
     "proj = ccrs.SouthPolarStereo()\n",
     "cmap = ListedColormap([ad.bcol['Weddell'],ad.bcol['Ross'],ad.bcol['East Ant.'],ad.bcol['Amundsen'],ad.bcol['Peninsula']])\n",
     "cmap.set_under('w')\n",
     "cmap.set_over('.5')\n",
-    "\n",
-    "titles = ['a) Old iceberg calving','b) New iceberg calving','c) Old runoff and basal melt','d) New runoff and basal melt']\n",
     "\n",
     "savename = f'../draftfigs/masks.png'"
    ]
@@ -93,6 +95,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# New 3x1\n",
+    "\n",
+    "titles = ['a) Original distribution','b) New  runoff/basal melt','c) New calving']\n",
+    "\n",
+    "mpl.rc('figure',figsize=(7,3))\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "for v,vv in enumerate([ds['calving_point_id'],ds2['arrival_point_id'],ds2['calving_point_id']]):\n",
+    "    ax = fig.add_subplot(1,3,v+1,projection=proj)\n",
+    "    ax.set_extent([-180,180, -90, -60], crs=ccrs.PlateCarree())\n",
+    "    if v in [0]: vv += 5 #Move out of range\n",
+    "    im = ax.pcolormesh(lon,lat,vv,shading='auto',cmap=cmap,transform=ccrs.PlateCarree(),vmin=65.5,vmax=70.5)\n",
+    "    ax.coastlines(lw=.1)\n",
+    "\n",
+    "    gl = ax.gridlines(crs=ccrs.PlateCarree(),draw_labels=False)\n",
+    "    gl.xlocator = mticker.FixedLocator(np.arange(-180,210,30))\n",
+    "    gl.xformatter = LONGITUDE_FORMATTER\n",
+    "    ax.set_title(titles[v],loc='left')\n",
+    "    \n",
+    "plt.savefig(savename)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff718622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Old 2x2\n",
+    "\n",
+    "titles = ['a) Old iceberg calving','b) New iceberg calving','c) Old runoff and basal melt','d) New runoff and basal melt']\n",
+    "\n",
     "fig = plt.figure()\n",
     "\n",
     "for v,vv in enumerate([ds['calving_point_id'],ds2['calving_point_id'],ds['arrival_point_id'],ds2['arrival_point_id']]):\n",
