--- a/notebooks/Draftplot_ts_control.ipynb
+++ b/notebooks/Draftplot_ts_control.ipynb
@@ -170,6 +170,10 @@
     "nax = [1,2,4,5,6]\n",
     "alpha = .3\n",
     "\n",
+    "xb = [.9,.4,.1,.3,.1]\n",
+    "yb = [.85,.1,.2,.85,.8]\n",
+    "blabs = ['East\\nAnt.','Ross','Amun.','Wedd.','Pens.']\n",
+    "\n",
     "savename = f'../draftfigs/ts_control.png'"
    ]
   },
@@ -195,11 +199,14 @@
     "ax.set_extent([-180, 180, -80, -63], crs=ccrs.PlateCarree())\n",
     "for b,bas in enumerate(basin.values):\n",
     "    im = ax.scatter(lon,lat,15*np.nansum(mask[b,:,:,:],axis=0),c=ad.bcol[bas],transform=ccrs.PlateCarree(),label=bas,lw=0,alpha=1)\n",
+    "    ax.text(xb[b],yb[b],blabs[b],c=ad.bcol[bas],transform=ax.transAxes,ha='center',fontsize=8)\n",
     "ax.coastlines(lw=.1)\n",
     "ax.set_title('c) Ocean basins',loc='left')\n",
     "gl = ax.gridlines(crs=ccrs.PlateCarree(),draw_labels=False,color='k',linewidth=.1)\n",
     "gl.xlocator = mticker.FixedLocator(np.arange(-180,210,30))\n",
     "gl.xformatter = LONGITUDE_FORMATTER\n",
+    "\n",
+    "\n",
     "\n",
     "#Plot time series of pi control, spinup and new control per basin\n",
     "for b,bas in enumerate(basin.values):\n",
