Add labels to draftplot_historical

--- a/notebooks/Draftplot_historical.ipynb
+++ b/notebooks/Draftplot_historical.ipynb
@@ -198,6 +198,8 @@
     "\n",
     "ax[0].set_ylabel('Cumulative sea-level rise relative to 1979 [cm]')\n",
     "ax[1].set_ylabel('Sea level rise rate [mm/yr]')\n",
+    "ax[0].set_title('a)',loc='left')\n",
+    "ax[1].set_title('b)',loc='left')\n",
     "\n",
     "fig.supxlabel('Time [years]')\n",
     "\n",
