--- a/notebooks/Draftplot_historical.ipynb
+++ b/notebooks/Draftplot_historical.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "31fe2692-ed70-4a04-ab7b-ca095a7092dd",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -49,7 +51,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2880f6cf-d24b-4c42-b89f-b5300461c778",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "option = 'calibrated'\n",
@@ -60,7 +64,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8da3af88-2775-4e38-83bd-a1346a73f711",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "ad = AllData()\n",
@@ -85,7 +91,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e6cb414-ca20-4575-b06f-7d9d8b81bedd",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "#Rignot data from Dewi\n",
@@ -127,7 +135,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f704f21d-62c5-4f3c-a497-3ab4dd47bb8b",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "plt.style.use('../src/style_paper')\n",
@@ -151,6 +161,7 @@
    "execution_count": null,
    "id": "3a5273d2-64ea-487e-b1a1-e7eeae572bfd",
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -166,7 +177,7 @@
     "\n",
     "#Plot no feedback\n",
     "var = 100*(fe.slr[0,1,:,:,:]-fe.slr[0,1,:,:,1979-fe.year0])\n",
-    "dax.plot(fe.time,np.nanmedian(var,axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
+    "dax.plot(fe.time,np.nanmedian(var,axis=(0,1)),c='.5',lw=2,ls='--',label='No feedback')\n",
     "dax.fill_between(fe.time,np.nanpercentile(var,perc[0],axis=(0,1)),np.nanpercentile(var,perc[1],axis=(0,1)),color='.5',alpha=alpha)#,label=perc)\n",
     "\n",
     "#Plot with feedback\n",
@@ -186,7 +197,7 @@
     "\n",
     "#Plot no feedback\n",
     "var = 1000*(fe.slr[0,1,:,:,1:].values-fe.slr[0,1,:,:,:-1].values)\n",
-    "dax.plot(fe.time[1:],np.nanmedian(var,axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
+    "dax.plot(fe.time[1:],np.nanmedian(var,axis=(0,1)),c='.5',lw=2,ls='--',label='No feedback')\n",
     "dax.fill_between(fe.time[1:],np.nanpercentile(var,perc[0],axis=(0,1)),np.nanpercentile(var,perc[1],axis=(0,1)),color='.5',alpha=alpha)#,label=perc)\n",
     "\n",
     "#Plot with feedback\n",
