--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -15,7 +15,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "071cf1c5-7d58-4e10-bce6-958b974e49cc",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -52,7 +54,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bf9dda5f-29d2-4c55-bb9a-349f485fbd43",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "#Interesting ensemble members:\n",
@@ -63,7 +67,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b590cfa7-1d34-440e-8578-74b61ffbce94",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "#Choose starting year\n",
@@ -111,7 +117,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1bbc0e3c-b540-41d1-af26-7a5f6febec77",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "#Read data\n",
@@ -150,7 +158,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ad069e09-9787-4b25-be47-88d81fd48b84",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "plt.style.use('../src/style_paper')\n",
@@ -173,7 +183,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd66d76c-b2af-4895-bc57-74dd68fa5d99",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -194,7 +206,7 @@
     "        dax.axhline(0,0,1,ls=':',c='k',lw=.5)\n",
     "\n",
     "        #No feedback in grey\n",
-    "        dax.plot(ens.time,var[0,:,b],c='.5',lw=1)#,label='No feedback')\n",
+    "        dax.plot(ens.time,var[0,:,b],c='.5',lw=1,ls='--')#,label='No feedback')\n",
     "        \n",
     "        #if v == 1:\n",
     "        #    dax.text(.1,.8,f'{var[0,-1,b]:.1f}',transform=dax.transAxes)\n",
@@ -212,7 +224,7 @@
     "        dax.set_visible(False)\n",
     "        continue\n",
     "    dax.axhline(0,0,1,ls=':',c='k')\n",
-    "    dax.plot(ens.time,np.sum(var[0,:,:],axis=-1),c='.5',lw=1,label='No feedback')\n",
+    "    dax.plot(ens.time,np.sum(var[0,:,:],axis=-1),c='.5',lw=1,ls='--',label='No feedback')\n",
     "    dax.plot(ens.time,np.sum(var[1,:,:],axis=-1),c='k',lw=1,label='Feedback')\n",
     "    #dax.plot(ens.time,np.sum(var[2,:,:],axis=-1),c='k',lw=1,label='Feedback\\nafter recal.')\n",
     "    \n",
