--- a/notebooks/Draftplot_full_ensemble_calibrated_lump.ipynb
+++ b/notebooks/Draftplot_full_ensemble_calibrated_lump.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "31fe2692-ed70-4a04-ab7b-ca095a7092dd",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -49,6 +51,7 @@
    "execution_count": null,
    "id": "fa9b953b-df10-4da8-8a20-51886523dcf3",
    "metadata": {
+    "metadata": {},
     "tags": []
    },
    "outputs": [],
@@ -86,14 +89,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f704f21d-62c5-4f3c-a497-3ab4dd47bb8b",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "plt.style.use('../src/style_paper')\n",
     "mpl.rc('figure.subplot',left=.15,bottom=.2)\n",
     "\n",
     "alpha = .3 #Transparency of uncertainty range\n",
-    "perc = [17,83] #Percentiles of uncertainty range"
+    "perc = [17,83] #Percentiles of uncertainty range\n",
+    "titles = ['SSP1-2.6','SSP2-4.5','SSP5-8.5']"
    ]
   },
   {
@@ -109,7 +115,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "608683aa-7328-402c-85ff-68a0b6ba45df",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "fig,ax = plt.subplots(1,3,sharex=True,sharey='row',figsize=(7,3))\n",
@@ -119,14 +127,14 @@
     "for s,ss in enumerate(ad.ssp):\n",
     "    \n",
     "    #Plot no feedback\n",
-    "    ax[s].plot(fe.time,100*np.nanmedian(fe.slr[0,s,:,:,:],axis=(0,1)),c='.5',lw=2,label='No feedback')\n",
+    "    ax[s].plot(fe.time,100*np.nanmedian(fe.slr[0,s,:,:,:],axis=(0,1)),c='.5',lw=2,ls='--',label='No feedback')\n",
     "    ax[s].fill_between(fe.time,100*np.nanpercentile(fe.slr[0,s,:,:,:],perc[0],axis=(0,1)),100*np.nanpercentile(fe.slr[0,s,:,:,:],perc[1],axis=(0,1)),color='.5',alpha=alpha)#,label=perc)\n",
     "\n",
     "    #Plot with feedback\n",
     "    ax[s].plot(fe.time,100*np.nanmedian(fe.slr[1,s,:,:,:],axis=(0,1)),c=ad.scol[ss],lw=2,label='Feedback')\n",
     "    ax[s].fill_between(fe.time,100*np.nanpercentile(fe.slr[1,s,:,:,:],perc[0],axis=(0,1)),100*np.nanpercentile(fe.slr[1,s,:,:,:],perc[1],axis=(0,1)),color=ad.scol[ss],alpha=alpha)\n",
     "    \n",
-    "    ax[s].set_title(f'SSP-{ss}')\n",
+    "    ax[s].set_title(titles[s])\n",
     "    \n",
     "    print(ss,'md',np.nanmedian(fe.slr[1,s,:,:,:],axis=(0,1))[-1]/(np.nanmedian(fe.slr[0,s,:,:,:],axis=(0,1))[-1]))\n",
     "    #print(ss,'mn',np.nanmean(fe.slr[1,s,:,:,:],axis=(0,1))[-1]/(np.nanmean(fe.slr[0,s,:,:,:],axis=(0,1))[-1]))\n",
